k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: k8s-app-staging
  labels:
    name: k8s-app-staging
---
apiVersion: v1
kind: Namespace
metadata:
  name: k8s-app-prod
  labels:
    name: k8s-app-prod
